--- a/app/package.json
+++ b/app/package.json
@@ -2,11 +2,9 @@
   "name": "app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "rm -rf build && npm build-sass",
+    "build-sass": "node-sass --output-style expanded src/index.scss ./build/index.css  && npm build-autoprefix",
+    "build-autoprefix": "postcss --use autoprefixer --map --output ./build/index.css ./build/index.css"
   },
   "private": true,
   "dependencies": {
@@ -29,12 +27,16 @@
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.23",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.9.4"
   }
